# qmlir

./: install_readme.txt
data/ibm_challenge/: plot-gate-statistics.py
include/Dialect/Quantum/: Passes.h  Passes.td  QuantumOps.td
include/Dialect/Quantum/Transforms/: CMakeLists.txt  QuantumHX.td
lib/Dialect/Quantum/Transforms/: CMakeLists.txt  QuantumHX.cpp
